big refactor, move java config to own panel